--- a/src/sass/components/_modal-subscribe.scss
+++ b/src/sass/components/_modal-subscribe.scss
@@ -1,47 +1,55 @@
-.backdrop {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.backdrop-subscribe {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.20);
+    background-color: rgba(0, 0, 0, 0.593);
     z-index: 10;
-    border-radius: 15px;
     width: 100%;
     height: 100%;
+    overflow: auto;
 }
 
-.modal {
+.modal-subscribe {
     border-radius: 15px;
     width: 311px;
-    height: 350px;
-    position: absolute;
+    position: relative;
     background: #FFF;
-    z-index: 11;
-    padding: 200px 24px 32px 24px;
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: auto;
+    @media screen and (min-width: 768px) {
+        width: 538px;
+    }
+
 
 
     &__btn-close {
     position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50px;
-    color: rgba(0, 0, 0, 0.10);
-    background-color: getcolor('white-color');
-    margin: 0 auto;
+    top: 15px;
+    right: 14px;
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
+    @media screen and (min-width: 768px) {
+        width: 28px;
+        height: 28px;
+        top: 24px;
+        right: 24px;
+    }
 }
 
  &__svg-close {
-     width: 18px;
-     height: 18px;
+     width: 12px;
+     height: 12px;
      fill: getcolor('white-color');
+     @media screen and (min-width: 768px) {
+        width: 14px;
+        height: 14px;
+    }
      
 
      &:hover, &:focus {
@@ -49,20 +57,30 @@
      }
  }
 
-&__img {
-    width: 311px;
+&__background {
+    width: 100%;
     height: 169px;
-    position: absolute;
-    top: 0;
-    left: 0;
+    background-color: getcolor('black-color');
+    background-image: url('../images/subscribe/subscribe-btn/choc-subscribe.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    @media screen and (min-width: 768px) {
+        height: 196px;
+    }
+}
+
+ &__info {
+    padding: 32px 24px;
+    @media screen and (min-width: 768px) {
+        padding: 40px;
+    }
 }
 
  &__title {
-    font-family: 'font-family', sans-serif;
     text-transform: uppercase;
     color: getcolor('black-color');
     margin-bottom: 24px;
-    @include fonts(20px, 600px, 120%, -0.03px);
+    @include fonts(20px, 600px, 1.2, -0.6px);
 
     &--orange {
         color: getcolor('orange-color');
@@ -70,11 +88,24 @@
 }
 
    &__input {
-    width: 263px;
-    height: 45px;
-   }
+    width: 100%;
+    padding: 14px 18px;
+    border-radius: 25px;
+    border: 1.5px solid rgba(17, 17, 17, 0.05);
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.03);
+    @media screen and (min-width: 768px) {
+        padding: 14px 24px;
+        width: 313px;
+        border-radius: 30px;
+        margin-right: 8px;
+        box-shadow: none;
+    }
+}
 
    &__submit {
+    position: absolute;
+    bottom: 32px;
+    right: 24px;
     border-radius: 100px;
     padding: 14px 28px;
     width: 100px;
@@ -85,5 +116,11 @@
     text-align: center;
     color: getcolor('white-color');
     background-color: getcolor('orange-color');
+
+    @media screen and (min-width: 768px) {
+        position: static;
+        display: inline-block;
+        padding: 17px 20px;
+    }
    }
 }
